--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
 
     <!-- Custom CSS -->
+    <link rel="stylesheet" href="css/themes.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -25,6 +26,9 @@
     <!-- Custom JS -->
     <script src="js/api.js"></script>
     <script src="js/auth.js"></script>
+    <script src="js/store.js"></script>
+    <script src="js/notifications.js"></script>
+    <script src="js/investments.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
